# simple-book-reviews-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.docker/: .dockerignore
.docker/backend/: Dockerfile  entrypoint.sh
.docker/nginx/: Dockerfile  location-basic.conf  nginx.dev.conf
book_review/config/: settings.py  urls.py
book_review/core/: admin.py  apps.py  managers.py  models.py  tasks.py
book_review/core/API/routes/: auth.py  review.py
book_review/core/API/schemas/: auth.py  review.py
book_review/core/API/utils/: auth.py  tokens.py
book_review/core/migrations/: 0001_initial.py  0002_review.py  0003_rename_rate_review_rating.py
book_review/core/utils/: pagination.py  validators.py
